# rune-ls-wasm

./: .gitignore  README.md  flake.nix  package.json  pnpm-lock.yaml  tsconfig.app.json  tsconfig.node.json
.cargo/: config.toml
.github/workflows/: ci.yml
crates/rune-languageserver/: Cargo.toml  default.nix
crates/rune-languageserver/src/: main.rs  stdin.rs
pkgs/: 0001-add-wasm-specific-cargo-config.patch  0001-patch-languageserver-for-emscripten-platform.patch  rune-ls-wasm.nix
